--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "html-to-image": "^1.9.0",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.4",
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
